--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,12 @@
         "psr-4":{
             "Nobilecode\\NamecheapClient\\": "src"
         }
+    },
+    "extra":{
+        "laravel":{
+            "providers":{
+                "Nobilecode\\NamecheapClient\\Providers\\NamecheapClientApiServiceProvider"
+            }
+        }
     }
 }
