--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,10 @@
     "description": "SDK Namecheap Client API",
     "type": "library",
     "require": {
-        "illuminate/support": "^8.0",
         "php": "^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.1"
+        "phpunit/phpunit": "^9.1@dev"
     },
     "license": "MIT",
     "authors": [
