--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "SDK Namecheap Client API",
     "type": "library",
     "require": {
-        "illuminate/support": "^8.0",
         "laravel/framework": "^7.0",
+        "illuminate/support": "^8.0@dev",
         "php": "^7.0"
     },
     "require-dev": {
