--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "nobilecode/namecheap-client",
     "description": "SDK Namecheap Client API",
+    "version": "1.0.0-dev",
     "type": "library",
     "require": {
         "laravel/framework": "^7.0",
