--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "SDK Namecheap Client API",
     "type": "library",
     "require": {
-        "laravel/framework": "^7.0.0",
-        "illuminate/support": "^8.0@dev",
+        "laravel/framework": "^7.x",
+        "illuminate/support": "^8.0",
         "php": "^7.0"
     },
     "require-dev": {
