--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
     "description": "SDK Namecheap Client API",
     "type": "library",
     "require": {
-        "illuminate/support": "^8.0",
-        "php": "^7.0"
+        "laravel/framework": "^7.0",
+        "illuminate/support": "^8.0@dev",
+        "php": "^7.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.1@dev"
