--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,12 @@
 {
     "name": "nobilecode/namecheap-client",
-    "description": "SDK Namecheap Client API",
     "type": "library",
-    "require": {
-        "laravel/framework": "^7.0",
-        "illuminate/support": "^8.0@dev",
-        "php": "^7.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.1@dev"
-    },
+    "description": "SDK Namecheap Client API",
+    "keywords": [
+        "laravel",
+        "namecheap",
+        "api"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -17,7 +14,16 @@
             "email": "nabilghoudane@gmail.com"
         }
     ],
+    "require": {
+        "php": "^7.0",
+        "laravel/framework": "^7.0",
+        "illuminate/support": "^8.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.1"
+    },
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload":{
         "psr-4":{
             "Nobilecode\\NamecheapClient\\": "src"
