--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     ],
     "require": {
         "php": "^7.0",
-        "laravel/framework": "^7.0",
-        "illuminate/support": "^8.0"
+        "laravel/framework": "^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.1"
