--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     ],
     "require": {
         "php": "^7.0",
-        "laravel/framework": "^7.0"
+        "laravel/framework": "^7.0",
+        "illuminate/support": "^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.1"
