--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "laravel/framework": "^5.0",
-        "illuminate/support": "^7.0"
+        "php": ">=7.0",
+        "laravel/framework": ">=5.0",
+        "illuminate/support": ">=5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.1"
